fixed z-index

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -405,13 +405,10 @@ button {
     height: 400px;
     background: url(../img/tax-color.jpeg) 100% 80%;
     background-size: cover;
-
-    p,
-    h1 {
-        position: relative;
-        left: 10%;
-        top: 15%;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .tax-container {
@@ -979,15 +976,16 @@ a.error-404 {
 
     // mobile menu
     nav {
+
         ul.flex {
             position: absolute;
             top: 0;
             left: -100vw;
             height: 100vh;
             width: 70vw;
+            background: #fff;
             padding-left: 5vw;
             overflow: hidden;
-            background: #fff;
             flex-direction: column;
             z-index: 10;
             transition: var(--transition-1);
@@ -1126,6 +1124,12 @@ a.error-404 {
             .flex {
                 flex-direction: row;
             }
+        }
+    }
+
+    .series-container {
+        .text-center {
+            z-index: -1;
         }
     }
 
